--- a/work/godiva/index.html
+++ b/work/godiva/index.html
@@ -12,6 +12,6 @@
       width: 35%;
   }
 </style>
-<img src="/static/Godivaprez_(revised)-01-ac0ad67af2828d9a803dac9f0551a9b5.png" class="scroll" />
+<img src="/static/godivaprez(revised)-b256260a5b915997ba27012f98be5361.png" class="scroll" />
     <br>
 <img src="/godiva.gif" class="gif"/></div></div></div></div></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/work/godiva";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-72802318d9864c1e0b18.js"],"component---src-templates-page-js":["/component---src-templates-page-js-62a80149626fc054dd17.js"],"component---src-pages-404-js":["/component---src-pages-404-js-deeea1cdb3ad5a78bfe7.js"],"component---src-pages-about-js":["/component---src-pages-about-js-237bbb768cef3c896d7c.js"],"component---src-pages-contact-js":["/component---src-pages-contact-js-efbe0cc06290a08176c5.js"],"component---src-pages-index-js":["/component---src-pages-index-js-fbec1bf02597a7d5bba7.js"],"component---src-pages-resume-js":["/component---src-pages-resume-js-adda9d51d2b6fc25a005.js"]};/*]]>*/</script><script src="/webpack-runtime-d7960c77b18c1c7896a4.js" async=""></script><script src="/commons-0730b3859f809d76f357.js" async=""></script><script src="/app-72802318d9864c1e0b18.js" async=""></script><script src="/styles-f425e9eb4fa97dd88d9c.js" async=""></script><script src="/component---src-templates-page-js-62a80149626fc054dd17.js" async=""></script></body></html>
