--- a/NASA/index.html
+++ b/NASA/index.html
@@ -9,9 +9,40 @@
 /static/090a2392003eef561e7655f65ddbbb47/73f08/ElenaBremnerBold.png 1200w,
 /static/090a2392003eef561e7655f65ddbbb47/063af/ElenaBremnerBold.png 1600w,
 /static/090a2392003eef561e7655f65ddbbb47/5cd0e/ElenaBremnerBold.png 1694w" src="/static/090a2392003eef561e7655f65ddbbb47/f9ff4/ElenaBremnerBold.png" alt="" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/></picture></noscript></div></div><div class="sidebar-module--work--3WrnN"><a style="color:black;text-decoration:none" href="/">Work</a><a class="sidebar-module--optionalWork--1MV5a" style="color:black;text-decoration:none" href="/UX/">UX/UI</a><a class="sidebar-module--optionalWork--1MV5a" style="color:black;text-decoration:none" href="/physical/">Physical</a><a class="sidebar-module--optionalWork--1MV5a" style="color:black;text-decoration:none" href="/sketch/">Explorations</a></div><a style="color:black;text-decoration:none" href="/about/">About me</a><br/><a style="color:black;text-decoration:none" href="/contact/">Contact</a><br/><a href="/static/websiteResume-7a1f3d6157084eaa410f4ee596026c54.pdf" style="color:black;text-decoration:none">Resume</a><br/></div></div><div class="layout-module--maincontent--2PV0r"><div><div class="header-module--title--2iLmX"> <!-- -->NASA Lunar Habitat Design<!-- --> </div><div class="header-module--info--1z3Cv"> <!-- -->March, 2020 (10 WEEKS)</div><div class="header-module--info--1z3Cv"> </div><br/><div class="header-module--oneliner---BbCj"> </div><br/></div><div><style>
-
+.intro{
+    color:black;
+    font-family: 'Lato', sans-serif;
+    font-size:14pt;
+    width:65%;
+    position:relative;
+/*    margin-top:3%;
+    margin-left:5%;*/
+    margin:auto;
+    line-height:1.5;
+    background-color:#F8F8F8;
+    padding:8%;
+    margin-bottom:5%;
+    margin-top:5%;
+}
+.section{
+    font-size:24pt;
+    margin-top:5%;
+    text-align: center;
+    font-family: masqualero, sans-serif;
+    font-weight:700;
+    color:#4f4f4f;
+}
 
 </style>
+<div class="section"> Intro </div>
+<div class="intro"> 
+    In the spring of 2020, working collaboratively with six other designers, we presented a habitat design to NASA for the 2024 Artemis mission. We were taught and guided by Michael Lye, NASA coordinator and RISD professor. 
+     <br><br>
+    The objective was to <b> design a lunar surface habitat for a 30 day mission for 4 astronauts. The habitat was to be contained within a cylindrical module with an interior of 4.4 meters by 7 meters. 
+    </b>
+     <br><br>
+     <b>My Role:</b> Crew Quarters Lead
+</div>
 <div style="width:100%;margin:center;">
  <span class="gatsby-resp-image-wrapper" style="position: relative; display: block; margin-left: auto; margin-right: auto;  max-width: 1000px;">
       <a class="gatsby-resp-image-link" href="/static/76288e258b12909f412fdcb70e110272/c7a69/MainDeck.png" style="display: block" target="_blank" rel="noopener">
